add plex/productionConceptGraphs to the mutable file system

--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -334,6 +334,7 @@
     vertical-align:top;
     text-align:center;
     white-space: normal;
+    overflow:scroll;
 }
 .leftNav1Button_old {
     width:90px;
