--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -928,3 +928,24 @@
 .childrenNodesContainer {
     margin-left:30px;
 }
+#avatarContainer {
+	display:inline-block;
+	background-color:#EFEFEF;
+	width:300px;
+	height:300px;
+	text-align:center;
+	position:relative;
+}
+#avatarBox {
+	display:inline-block;
+	background-color:blue;
+	border:5px solid black;
+	border-radius:250px;
+	width:95%;
+	height:95%;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
