--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -949,3 +949,35 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+.contactsPageAvatarContainer {
+	display:inline-block;
+	background-color:#EFEFEF;
+	width:50px;
+	height:50px;
+	text-align:center;
+	position:relative;
+}
+.contactsPageAvatarThumb {
+    display:inline-block;
+    background-color:blue;
+    border:1px solid black;
+    border-radius:250px;
+    width:95%;
+    height:95%;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.contactsPageUsernameContainer {
+    font-size:12px;
+    display:inline-block;
+    margin-left:20px;
+}
+.contactPageSingleContactContainer {
+    border:1px solid purple;
+    border-radius:5px;
+    padding:5px;
+    margin-bottom:5px;
+}
