--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -936,10 +936,23 @@
 	text-align:center;
 	position:relative;
 }
-#avatarBox {
+.mainProfilePageAvatarBox {
 	display:inline-block;
 	background-color:blue;
 	border:5px solid black;
+	border-radius:250px;
+	width:95%;
+	height:95%;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.rateUserPageAvatarBox {
+	display:inline-block;
+	background-color:blue;
+	border:2px solid black;
 	border-radius:250px;
 	width:95%;
 	height:95%;
