--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -1063,3 +1063,31 @@
     border:1px dashed grey;
     font-size:10px;
 }
+.chatroomPeerAvatarContainer {
+    display:inline-block;
+    background-color:#EFEFEF;
+    width:50px;
+    height:50px;
+    text-align:center;
+    position:relative;
+}
+.chatroomPeerUserInfoContainer {
+    border:1px solid purple;
+    padding:2px;
+    margin:2px;
+    border-radius:3px;
+    font-size:10px;
+}
+.chatroomPageAvatarBox {
+	display:inline-block;
+	background-color:blue;
+	border:1px solid black;
+	border-radius:50px;
+	width:95%;
+	height:95%;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
