--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -1317,3 +1317,66 @@
     float:right;
     color:grey;
 }
+.pitterTrailMainContainer {
+    width:700px;
+    height:950px;
+    border:1px solid purple;
+    display:inline-block;
+}
+.pitterTrailInfoContainer {
+    width:500px;
+    height:950px;
+    border:1px solid grey;
+    display:inline-block;
+}
+.pitterTrailLeaveMessageContainer {
+    width:100%;
+    height:250px;
+    border:1px dashed grey;
+}
+.pitterTrailMessagesContainer {
+    width:100%;
+    height:700px;
+    border:1px dashed grey;
+}
+.writeNewPostTextarea {
+    width:99%;
+    height:100px;
+    border:1px dashed grey;
+    border-radius:5px;
+    padding:3px;
+    font-size:16px;
+}
+.numberOfCharactersContainerWrapper_old {
+    display:none;
+    width:35px;
+    height:35px;
+    border:1px solid green;
+    border-radius:17px;
+    text-align:center;
+    margin-left:18px;
+    margin-top:63px;
+    vertical-align:bottom;
+}
+.numberOfCharactersContainerWrapper {
+    display:none;
+    width:30px;
+    height:30px;
+    border:1px solid green;
+    border-radius:15px;
+    text-align:center;
+    vertical-align:bottom;
+    font-size:12px;
+}
+#submitPostButton {
+    display:inline-block;
+    padding:0px 3px 0px 3px;
+    font-size:18px;
+    border:2px solid purple;
+    border-radius:5px;
+    margin-left:20px;
+    margin-right:20px;
+}
+#submitPostButton:hover {
+    background-color:yellow;
+}
