--- a/src/css/plex.css
+++ b/src/css/plex.css
@@ -960,6 +960,14 @@
 	text-align:center;
 	position:relative;
 }
+#uploadImagesContainer {
+	display:inline-block;
+	background-color:#EFEFEF;
+	width:300px;
+	height:300px;
+	text-align:center;
+	position:relative;
+}
 .mainProfilePageAvatarBox {
 	display:inline-block;
 	background-color:blue;
@@ -1331,7 +1339,7 @@
 }
 .pitterTrailLeaveMessageContainer {
     width:100%;
-    height:250px;
+    height:180px;
     border:1px dashed grey;
 }
 .pitterTrailMessagesContainer {
@@ -1380,5 +1388,8 @@
     transition: all 0.1s ease;
 }
 #submitPostButton:hover {
+    background-color:yellow;
+}
+#addPicsToggleButton:hover {
     background-color:yellow;
 }
